--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,3 +7,14 @@ h4 {
   float:left;
   display:block;
 }
+
+.message {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  height: 50px;
+  transition: 1s;
+  visibility: visible;
+  opacity: 1;
+}
