--- a/client/css/stylehome.css
+++ b/client/css/stylehome.css
@@ -123,7 +123,11 @@ div.ui.two.column.grid{
   margin-top: 10px;
 }
 
+
 div.ui.one.column.grid.voteQues{
+  width: 70%;
+}
+div.ui.two.column.grid.voteQues{
   width: 70%;
 }
 
